compiler/tests/fixtures/valid/role_with_mean.viv
// Role with slots mean

action rally:
    roles:
        @leader:
            as: initiator
        @crowd*:
            as: bystander
            n: 2-10 [~5]
