compiler/tests/fixtures/invalid/semantics/initiator_with_mean.viv
// Invalid: initiator role with mean

action bad-init-mean:
    roles:
        @actor:
            as: initiator
            n: 1-1 [~1]
